# medved-lang

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  медведь.spec
.github/workflows/: run_examples.yml  тесты.yml
deb/medved/DEBIAN/: control
deb/medved/usr/share/медведь/examples/: сервер.мед
docs/: setup.md  syntax.md
examples/: калькулятор.мед  привет.мед
src/: compiler.py  interpreter.py  lexer.py  main.py  package_manager.py  parser.py  аст.py  главный.py  интерпретатор.py  исполнитель.py  лексер.py  ошибки.py  парсер.py
tests/: test_compiler.py  test_interpreter.py  test_lexer.py  test_parser.py
примеры/: классы.медведь  привет.медведь  приветствие.мед  фибоначчи.медведь
тестовый_пакет/: README.md  пакет.json
тестовый_пакет/src/: тестовый_пакет.мед
